# speck

./: Cargo.toml  DESIGN.md  README.md  install.sh  justfile
.github/workflows/: ci.yml  release.yml
data/: AGENTS.md  ARCHITECTURE.md
data/prompts/: speck-code2tech.md  speck-feat2tech.md  speck-review.md  speck-tech2code.md  speck-tech2feat.md
packaging/homebrew/: speck.rb
scripts/: sync-version.sh
src/: cli.rs  config.rs  hashes.rs  helpers.rs  main.rs  test_utils.rs  zerostack.rs
src/commands/: apply.rs  chat.rs  fmt.rs  force_update.rs  git_hooks.rs  init.rs  migrate.rs  mod.rs  mv.rs  reset.rs  review.rs  rm.rs  status.rs  switch_lang.rs
