[package]
name = "speck"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["history", "editor"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
blake3 = "1.8.2"
walkdir = "2.5.0"
ignore = "0.4.26"
