[package]
name = "speck"
version = "1.0.0-rc2"
edition = "2024"
authors = ["Giuseppe Della Vedova"]
description = "Spec-driven agentic compiler, built on top of zerostack"
license = "GPL-3.0-only"
homepage = "https://github.com/gi-dellav/speck"
repository = "https://github.com/gi-dellav/speck"
readme = "README.md"
keywords = ["ai", "cli", "dev"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["history", "editor"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
blake3 = "1.8.2"
walkdir = "2.5.0"
ignore = "0.4.26"
